--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,12 +14,17 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4  # Check out the code from the repo
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v5  # Set up Python environment
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.x'  # Specify Python version
+          python-version: '3.x'
+
+      - name: Install PyJWT
+        run: |
+          python -m pip install --upgrade pip
+          pip install pyjwt  # Directly install PyJWT
 
       - name: Run the Python script
         run: |
