--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,10 +21,10 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install PyJWT
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyjwt  # Directly install PyJWT
+          pip install pyjwt python-jose  # Install both PyJWT and python-jose
 
       - name: Run the Python script
         run: |
