--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyjwt python-jose  # Install both PyJWT and python-jose
+          pip install pyjwt python-jose cryptography  # Install cryptography along with pyjwt and python-jose
 
       - name: Run the Python script
         run: |
