--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - '.github/sql_script/**'  # Only trigger when SQL files in this directory are modified
+      - '.github/sql_script/**'
 
 permissions:
   contents: read
@@ -26,6 +26,18 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
+
+      - name: Generate GitHub App JWT Token
+        id: generate_jwt
+        run: |
+          # Run Python script to generate JWT token and capture the output
+          python .github/utils/generate_jwt.py
+          
+          # Set the JWT token as an environment variable for the next steps
+          echo "JWT_TOKEN=$(cat .github/secrets/jwt_token.txt)" >> $GITHUB_ENV
+          
+          # Print the JWT token to the workflow logs
+          echo "JWT Token: ${{ env.JWT_TOKEN }}"
 
       - name: Check for CREATE statements in SQL files
         id: check_sql_changes
@@ -61,23 +73,23 @@ jobs:
             echo "create_script=false" >> "$GITHUB_ENV"
           fi
 
-      - name: Assign reviewer or approve PR
+      - name: Log message and assign reviewer
         run: |
           if [ "$create_script" = "true" ]; then
             echo "✅ CREATE statement detected. Reviewer required: Notyou1231"
-            # Assign a reviewer using GitHub API and JWT token
-            curl -X POST -H "Authorization: Bearer ${{ secrets.JWT_TOKEN }}" \
-            -H "Accept: application/vnd.github+json" \
-            https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/requested_reviewers \
-            -d '{"reviewers":["Notyou1231"]}'
+            # Use JWT token for GitHub App authentication to add reviewer
+            gh pr edit ${{ github.event.pull_request.number }} --add-reviewer Notyou1231 --token ${{ env.JWT_TOKEN }} || true
           else
-            echo "ℹ️ No CREATE statement found. Auto-approving the PR."
-            # Approve the PR using GitHub API and JWT token
-            curl -X POST -H "Authorization: Bearer ${{ secrets.JWT_TOKEN }}" \
-            -H "Accept: application/vnd.github+json" \
-            https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews \
-            -d '{"event":"APPROVE"}'
+            echo "ℹ️ No CREATE statement found. No reviewer required."
           fi
+
+      - name: Notify if CREATE script is missing reviewer
+        if: failure() && env.create_script == 'true'
+        run: |
+          gh pr comment ${{ github.event.pull_request.number }} \
+            --body "⚠️ No reviewer was assigned. Please assign a reviewer manually."
+        env:
+          JWT_TOKEN: ${{ env.JWT_TOKEN }}
 
       - name: Review Notification
         if: success() && env.create_script == 'true'
@@ -85,4 +97,4 @@ jobs:
           gh pr comment ${{ github.event.pull_request.number }} \
             --body "✅ Reviewer has been assigned and PR is pending approval before merge."
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          JWT_TOKEN: ${{ env.JWT_TOKEN }}
