--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install Python dependencies
         run: |
-          pip install PyJWT python-jose
+          pip install PyJWT python-jose cryptography
 
       - name: Generate GitHub App JWT Token
         id: generate_jwt
@@ -72,4 +72,33 @@ jobs:
 
           # Set the appropriate environment variable
           if [ "$CREATE_STATEMENT_FOUND" = true ]; then
-            echo "create_script=
+            echo "create_script=true" >> "$GITHUB_ENV"
+          else
+            echo "create_script=false" >> "$GITHUB_ENV"
+          fi
+
+      - name: Log message and assign reviewer
+        run: |
+          if [ "$create_script" = "true" ]; then
+            echo "✅ CREATE statement detected. Reviewer required: Notyou1231"
+            # Use JWT token for GitHub App authentication to add reviewer
+            gh pr edit ${{ github.event.pull_request.number }} --add-reviewer Notyou1231 --token ${{ env.JWT_TOKEN }} || true
+          else
+            echo "ℹ️ No CREATE statement found. No reviewer required."
+          fi
+
+      - name: Notify if CREATE script is missing reviewer
+        if: failure() && env.create_script == 'true'
+        run: |
+          gh pr comment ${{ github.event.pull_request.number }} \
+            --body "⚠️ No reviewer was assigned. Please assign a reviewer manually."
+        env:
+          JWT_TOKEN: ${{ env.JWT_TOKEN }}
+
+      - name: Review Notification
+        if: success() && env.create_script == 'true'
+        run: |
+          gh pr comment ${{ github.event.pull_request.number }} \
+            --body "✅ Reviewer has been assigned and PR is pending approval before merge."
+        env:
+          JWT_TOKEN: ${{ env.JWT_TOKEN }}
