--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -10,7 +10,6 @@ on:
 permissions:
   contents: read
   pull-requests: write
-  issues: write
 
 jobs:
   review_sql_scripts:
@@ -19,30 +18,25 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Fetch full history for accurate diffing
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
-      - name: Install Python dependencies
+      - name: Install dependencies
         run: |
-          pip install PyJWT python-jose cryptography
+          python -m pip install --upgrade pip
+          pip install PyJWT cryptography
 
-      - name: Generate GitHub App JWT Token
+      - name: Generate JWT Token
         id: generate_jwt
         run: |
-          # Run Python script to generate JWT token and capture the output
           python .github/utils/generate_jwt.py
-          
-          # Set the JWT token as an environment variable for the next steps
-          echo "JWT_TOKEN=$(cat .github/secrets/jwt_token.txt)" >> $GITHUB_ENV
-          
-          # Print the JWT token to the workflow logs
-          echo "JWT Token: ${{ env.JWT_TOKEN }}"
-
+        env:
+          APP_ID: ${{ secrets.APP_ID }}
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      
       - name: Check for CREATE statements in SQL files
         id: check_sql_changes
         run: |
@@ -70,47 +64,27 @@ jobs:
             done
           fi
 
-          # Set the appropriate environment variable based on whether a CREATE statement was found
+          # Set the appropriate environment variable
           if [ "$CREATE_STATEMENT_FOUND" = true ]; then
             echo "create_script=true" >> "$GITHUB_ENV"
           else
             echo "create_script=false" >> "$GITHUB_ENV"
           fi
 
-      - name: Auto-approve PR if no CREATE statements found
-        if: env.create_script == 'false'  # Only for PRs with no CREATE statements
+      - name: Approve PR or Notify Reviewer
         run: |
-          echo "No CREATE statement found, auto-approving PR."
-          # Use GitHub CLI to approve the PR
-          gh pr review ${{ github.event.pull_request.number }} --approve
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Log message and assign reviewer
-        run: |
-          echo "create_script value: ${{ env.create_script }}"
-          if [ "${{ env.create_script }}" = "true" ]; then
-            echo "✅ CREATE statement detected. Reviewer required: Notyou1231"
-            # Add reviewer to PR using GitHub CLI
-            gh pr edit ${{ github.event.pull_request.number }} --add-reviewer Notyou1231 || true
+          if [ "$create_script" = "true" ]; then
+            echo "CREATE statement found. Notify reviewer."
+            gh pr edit ${{ github.event.pull_request.number }} --add-reviewer Notyou1231
           else
-            echo "ℹ️ No CREATE statement found. No reviewer required."
+            echo "No CREATE statement found. Auto-approving the PR."
+            gh api graphql -f query='
+              mutation {
+                addPullRequestReview(input: {pullRequestId: "${{ github.event.pull_request.node_id }}", event: APPROVE, body: "Auto-approved by GitHub App"}) {
+                  clientMutationId
+                }
+              }
+            ' --header "Authorization: Bearer ${{ steps.generate_jwt.outputs.token }}"
           fi
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Notify if CREATE script is missing reviewer
-        if: failure() && env.create_script == 'true'
-        run: |
-          gh pr comment ${{ github.event.pull_request.number }} \
-            --body "⚠️ No reviewer was assigned. Please assign a reviewer manually."
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Review Notification
-        if: success() && env.create_script == 'true'
-        run: |
-          gh pr comment ${{ github.event.pull_request.number }} \
-            --body "✅ Reviewer has been assigned and PR is pending approval before merge."
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
