--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -27,8 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install PyJWT cryptography
-
+          pip install PyJWT cryptography python-jose
       - name: Generate JWT Token
         id: generate_jwt
         run: |
