--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -6,7 +6,7 @@ on:
       - main
     types: [opened, synchronize, reopened]
     paths:
-      - '.github/sql_scripts/**'  # Path to monitor for SQL file changes
+      - '.github/sql_script/**'  # Path to monitor for SQL file changes
 
 permissions:
   contents: read
