--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -1,27 +1,94 @@
-name: Auto-approve PR for Specific Paths
+name: Review and Approve/Merge SQL Scripts
 
 on:
   pull_request:
     branches:
       - main
     paths:
-      - '.github/sql_script/**'  # Trigger when files in this path are changed
+      - '.github/sql_script/**'
+
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
 
 jobs:
-  approve_pr:
+  process_sql_scripts:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch full history for accurate diffing
 
-      - name: Approve PR using GitHub API as Code Owner
-        env:
-          GH_TOKEN: ${{ secrets.HK_PA_TOKEN }}  # PAT for 'Notyou1231'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+
+      - name: Check SQL files for CREATE statements
+        id: check_sql_changes
         run: |
-          PR_NUMBER=$(jq --raw-output .pull_request.number < $GITHUB_EVENT_PATH)
-          REPO_NAME=$(jq --raw-output .repository.full_name < $GITHUB_EVENT_PATH)
+          # Use explicit base and head SHAs for diffing
+          CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -E '\.github/sql_script/.*\.(sql|txt)$' || true)
 
-          curl -X POST \
-            -H "Authorization: token $GH_TOKEN" \
-            -d '{"event":"APPROVE","body":"Auto-approving this PR by Code Owner"}' \
-            "https://api.github.com/repos/$REPO_NAME/pulls/$PR_NUMBER/reviews"
+          echo "Changed SQL files: $CHANGED_FILES"
+
+          # Initialize environment variable for script evaluation
+          CREATE_STATEMENT_FOUND=false
+
+          if [ -n "$CHANGED_FILES" ]; then
+            for file in $CHANGED_FILES; do
+              if [ -f "$file" ]; then
+                echo "Analyzing file: $file"
+
+                # Remove single-line and multiline comments, then check for CREATE statements
+                SQL_CONTENT=$(sed -E '/^\s*--/d' "$file" | sed -E ':a;N;$!ba;s/\s*\/\*.*?\*\///g')
+                if echo "$SQL_CONTENT" | grep -iq "CREATE"; then
+                  CREATE_STATEMENT_FOUND=true
+                  echo "CREATE statement found in $file"
+                  break
+                fi
+              fi
+            done
+          fi
+
+          # Set the appropriate environment variable
+          if [ "$CREATE_STATEMENT_FOUND" = true ]; then
+            echo "create_script=true" >> "$GITHUB_ENV"
+          else
+            echo "create_script=false" >> "$GITHUB_ENV"
+          fi
+
+      - name: Assign reviewer for CREATE scripts
+        if: env.create_script == 'true'
+        run: |
+          echo "✅ CREATE statement detected. Assigning reviewer: sumeshmg"
+          gh pr edit ${{ github.event.pull_request.number }} --add-reviewer Notyou1231 || true
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Auto-approve PR if no CREATE statement
+        if: env.create_script == 'false'
+        run: |
+          echo "ℹ️ No CREATE statement found. Auto-approving PR."
+          gh pr review ${{ github.event.pull_request.number }} --approve --body "✅ Auto-approved as no CREATE statements detected."
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Notify if reviewer was assigned
+        if: env.create_script == 'true'
+        run: |
+          gh pr comment ${{ github.event.pull_request.number }} \
+            --body "⚠️ Manual review required. Reviewer `Notyou1231` has been assigned."
+        env:
+          GH_TOKEN: ${{ secrets.PA_TOKEN }}
+
+      - name: Notify if auto-approved
+        if: env.create_script == 'false'
+        run: |
+          gh pr comment ${{ github.event.pull_request.number }} \
+            --body "✅ PR auto-approved as no CREATE statements were found."
+        env:
+          GH_TOKEN: ${{ secrets.AJ_PA_TOKEN }}
