--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -10,7 +10,6 @@ on:
 permissions:
   contents: read
   pull-requests: write
-  issues: write
 
 jobs:
   process_sql_scripts:
@@ -20,7 +19,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Fetch full history for accurate diffing
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -30,20 +29,13 @@ jobs:
       - name: Check SQL files for CREATE statements
         id: check_sql_changes
         run: |
-          # Use explicit base and head SHAs for diffing
           CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -E '\.github/sql_script/.*\.(sql|txt)$' || true)
-
           echo "Changed SQL files: $CHANGED_FILES"
 
-          # Initialize environment variable for script evaluation
           CREATE_STATEMENT_FOUND=false
-
           if [ -n "$CHANGED_FILES" ]; then
             for file in $CHANGED_FILES; do
               if [ -f "$file" ]; then
-                echo "Analyzing file: $file"
-
-                # Remove single-line and multiline comments, then check for CREATE statements
                 SQL_CONTENT=$(sed -E '/^\s*--/d' "$file" | sed -E ':a;N;$!ba;s/\s*\/\*.*?\*\///g')
                 if echo "$SQL_CONTENT" | grep -iq "CREATE"; then
                   CREATE_STATEMENT_FOUND=true
@@ -54,7 +46,6 @@ jobs:
             done
           fi
 
-          # Set the appropriate environment variable
           if [ "$CREATE_STATEMENT_FOUND" = true ]; then
             echo "create_script=true" >> "$GITHUB_ENV"
           else
@@ -75,7 +66,7 @@ jobs:
           echo "ℹ️ No CREATE statement found. Auto-approving PR."
           gh pr review ${{ github.event.pull_request.number }} --approve --body "✅ Auto-approved as no CREATE statements detected."
         env:
-          GH_TOKEN: ${{ secrets.AJ_PA_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Notify if reviewer was assigned
         if: env.create_script == 'true'
@@ -92,3 +83,24 @@ jobs:
             --body "✅ PR auto-approved as no CREATE statements were found."
         env:
           GH_TOKEN: ${{ secrets.PA_TOKEN }}
+
+      - name: Notify via AWS SNS
+        if: env.create_script == 'true'
+        run: |
+          MESSAGE=$(cat <<EOF
+          {
+            "Subject": "Manual Review Required for SQL Script Changes",
+            "Message": "Pull Request #${{ github.event.pull_request.number }} requires manual review.\\n\\n\
+            PR Link: ${{ github.event.pull_request.html_url }}\\n\
+            Changed Files: ${{ steps.check_sql_changes.outputs.CHANGED_FILES }}\\n\
+            Approve: https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}/approve\\n\
+            Reject: https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}/reject",
+            "TopicArn": "${{ secrets.AWS_SNS_TOPIC_ARN }}"
+          }
+          EOF
+          )
+          echo "$MESSAGE"
+          aws sns publish --cli-input-json "$MESSAGE" --region "${{ secrets.AWS_REGION }}"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
