--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -84,37 +84,33 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.PA_TOKEN }}
 
-      - name: Notify via AWS SNS (HTML-formatted message)
+      - name: Notify via AWS SNS
         if: env.create_script == 'true'
         run: |
           CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -E '\.github/sql_script/.*\.(sql|txt)$' || true)
-          FILE_LIST=""
-          for file in $CHANGED_FILES; do
-            FILE_LIST="$FILE_LIST<li>$file</li>"
-          done
-
+          
           MESSAGE=$(cat <<EOF
-          {
-            "Subject": "Manual Review Required for SQL Script Changes",
-            "Message": "<h3>Pull Request #${{ github.event.pull_request.number }} requires manual review.</h3>
-            <p><strong>PR Link:</strong> <a href=\"https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}\">View PR</a></p>
-            
-            <p><strong>Changed Files:</strong></p>
-            <ul>
-              $FILE_LIST
-            </ul>
-            
-            <div style=\"margin-top: 20px;\">
-              <a href=\"https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}/approve\" style=\"padding: 10px 20px; background-color: green; color: white; text-decoration: none; border-radius: 5px;\">Approve</a>
-              <a href=\"https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}/reject\" style=\"padding: 10px 20px; background-color: red; color: white; text-decoration: none; border-radius: 5px; margin-left: 10px;\">Reject</a>
-            </div>
-            <br>
-            <p>If you wish to stop receiving notifications from this topic, you can unsubscribe by clicking <a href=\"https://sns.eu-central-1.amazonaws.com/unsubscribe.html?SubscriptionArn=arn:aws:sns:eu-central-1:767397784856:ReviewNotifications:36e5d695-9f93-476f-9a87-c3c8f72592c7&Endpoint=sumeshmgwork@gmail.com\">here</a>.</p>"
-          }
-          EOF
-          )
-          echo "$MESSAGE"
-          aws sns publish --cli-input-json "$MESSAGE" --region "${{ secrets.AWS_REGION }}"
+{
+  "Subject": "Manual Review Required for SQL Script Changes",
+  "Message": "<h3>Pull Request #${{ github.event.pull_request.number }} requires manual review.</h3>
+  <p><strong>PR Link:</strong> <a href=\\"${{ github.event.pull_request.html_url }}\\">View PR</a></p>
+  
+  <p><strong>Changed Files:</strong></p>
+  <ul>
+    $(for file in $CHANGED_FILES; do echo "<li>$file</li>"; done)
+  </ul>
+  
+  <div style=\\"margin-top: 20px;\\">
+    <a href=\\"https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}/approve\\" style=\\"padding: 10px 20px; background-color: green; color: white; text-decoration: none; border-radius: 5px;\\">Approve</a>
+    <a href=\\"https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}/reject\\" style=\\"padding: 10px 20px; background-color: red; color: white; text-decoration: none; border-radius: 5px; margin-left: 10px;\\">Reject</a>
+  </div>
+  <br>
+  <p>If you wish to stop receiving notifications from this topic, you can unsubscribe by clicking <a href=\\"https://sns.***.amazonaws.com/unsubscribe.html?SubscriptionArn=arn:aws:sns:***:767397784856:ReviewNotifications:36e5d695-9f93-476f-9a87-c3c8f72592c7&Endpoint=sumeshmgwork@gmail.com\\">here</a>.</p>"
+}
+EOF
+)
+
+          echo "$MESSAGE" | aws sns publish --cli-input-json file:///dev/stdin --region "${{ secrets.AWS_REGION }}"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
