--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -8,7 +8,7 @@ on:
       - '.github/sql_script/**'
 
 permissions:
-  contents: read
+  contents: write
   pull-requests: write
 
 jobs:
@@ -64,7 +64,6 @@ jobs:
       - name: Auto-approve PR if no CREATE statement
         if: env.create_script == 'false'
         run: |
-          echo "ℹ️ No CREATE statement found. Auto-approving PR."
           gh pr review ${{ github.event.pull_request.number }} --approve --body "✅ Auto-approved as no CREATE statements detected."
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
